[package]
name = "rust-microbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "allocate"
path = "src/mm/allocate.rs"

[[bin]]
name = "allocate_zero"
path = "src/mm/allocate_zero.rs"

[[bin]]
name = "thread_spawn"
path = "src/thread/thread_spawn.rs"

[[bin]]
name = "thread_yield"
path = "src/thread/thread_yield.rs"